ghc/tests/typecheck/should_fail/tcfail018.hs


module ShouldSucc where

(a:[]) = 1
